style.css
@media only screen and (min-width: 600px) {
  body {
    margin-left: 5%;
    margin-right: 5%;
  }
}

body {
  position: relative;
  margin: 0;
}

body * {
  width: 100%;
  line-height: 1.5;
}

h1 {
  display: flex;
  font-size: 2.4rem;
  align-items: center;
  justify-content: center;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  color:crimson;
  margin-bottom: 1rem;
}

h2 {
  display: flex;
  font-size: 1.6rem;
  align-items: center;
  justify-content: center;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  color:crimson
}

#about {
  width: auto;
  margin: 0 1rem;
}

/* EVENTS */

.day_header {
  font-size: 1.5rem;
  position: sticky;
  top: 0;
  background: white;
  opacity: 1;
  margin: 0 1rem;
  width: auto;
}

.day {
  & > *+* {
    margin-top: 1rem;
  }
}

.event {
  width: 100%;
  display: flex;
  flex-direction: row;
  box-sizing: border-box;
  align-items: center;

  .datetime {
    text-align: right;
    width: 7rem;
    padding: 1rem;
  }

  .details {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    border-left: 1px solid black;
    padding: 1rem;

    .name {
      font-size: 1.5rem;
      font-style: bold;
    }

   }

  &.current {
    background: #ffffd7;
  }

  &.break {
    color: #ccc;
    font-size: 1rem;
    .name {
      font-size: 1rem;
    }
    .details {
      border-left: 1px solid #ccc;
    }
  }
}


/* SPEAKERS */

#speakers {
  margin-top: 1rem;
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: masonry;
  gap: 1rem;
}

.speaker {
  box-sizing: border-box;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;

  .img {
    display: block;
    margin: 1rem auto;
    margin-top: 0;
    max-width: 20rem;
    max-height: 20rem;
    object-fit: cover;
    object-position: top;
  }

  @media only screen and (min-width: 600px) {
    .img {
       display: inline-block;
       float: right;
       margin: 1rem;
       margin-top: 0;
     }
  }

  .name {
    font-size: 1.5rem;
    font-weight: 700;
    margin-bottom: 1rem;
  }

  .bio {
    white-space: pre-wrap;
    width: 100%;
  }
}

@media print {
  .speaker {
    -webkit-column-break-inside: avoid;
    page-break-inside: avoid;
    break-inside: avoid;
    page-break-before: always;
  }
}

#organizers {
  text-align: center;

  .photos {
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;

    img {
      display: block;
      margin: 1rem auto;
      margin-top: 0;
      max-width: 15rem;
      max-height: 15rem;
      object-fit: cover;
      object-position: top;
    }
  }
}

